--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="assets/images/illustration-article.svg"/>
+    <img src="assets/images/illustration-article.svg" alt="blog-image"/>
     <div class="card-content">
       <h4>Learning</h4>
       <p>Published 21 Dec 2023</p>
