Added Semantic HTML classes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="card">
     <img src="assets/images/illustration-article.svg" alt="blog-image"/>
     <div class="card-content">
-      <h4>Learning</h4>
-      <p>Published 21 Dec 2023</p>
-      <h2>HTML & CSS Fundamentals</h2>
-      <p>These Languages are the backbone of every website, defining structure, content and presentation.</p>
+      <h4 class="category">Learning</h4>
+      <p class="publish-date">Published 21 Dec 2023</p>
+      <h2 class="title">HTML & CSS Fundamentals</h2>
+      <p class="description">These Languages are the backbone of every website, defining structure, content and presentation.</p>
     </div>
   </div>
 </body>
