Added author div, other style changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <h2 class="title">HTML & CSS Fundamentals</h2>
       <p class="description">These Languages are the backbone of every website, defining structure, content and presentation.</p>
     </div>
+    <div class="author">
+      <img class="userpic" src="assets/images/image-avatar.webp" alt="author-avatar"/>
+      <p>Greg Hooper</p>
+    </div>
   </div>
 </body>
 </html>
