--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card-content">
       <h4 class="category">Learning</h4>
       <p class="publish-date">Published 21 Dec 2023</p>
-      <h2 class="title">HTML & CSS Fundamentals</h2>
+      <h2 class="title">HTML & CSS Foundations</h2>
       <p class="description">These Languages are the backbone of every website, defining structure, content and presentation.</p>
     </div>
     <div class="author">
