Author name text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="author">
       <img class="userpic" src="assets/images/image-avatar.webp" alt="author-avatar"/>
-      <p>Greg Hooper</p>
+      <p class="author-name"><b>Greg Hooper</b></p>
     </div>
   </div>
 </body>
